# healthgpt

./: .gitignore  CHANGELOG.md  README.md  e2b.Dockerfile  e2b.toml  package.json  railway.Dockerfile  railway.toml  tailwind.config.js  tsconfig.json  version.json
.github/workflows/: create-release-branch.yml
app/: index.html  install-shadcn-components.sh  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
app/src/: index.css  vite-logger-plugin.ts
app/src/components/: DoctorChatbot.tsx  ThemeProvider.tsx  ThemeToggle.tsx
app/src/components/layout/: RootLayout.tsx
app/src/components/ui/: ChatInterface.tsx
app/src/lib/themes/: README.md  (+1 more)
app/src/types/: auth-types.ts
logging-server/: logging-server.py  pyproject.toml
services/: .pyre_configuration  get_openapi.py  main.py  pyproject.toml
services/api/: bootstrap.py  mock_routes.py  models.py  routes.py  utils.py
services/core/: ai_query_processor.py  appointment.py  custom_ranking_service.py  doctor.py  doctor_finder_service.py  doctor_review.py  doctor_search.py  enhanced_ai_query_processor.py  medical_specialty.py  user_query.py
services/solar/: __init__.py  access.py  config.py  media.py  table.py
src/: Fallback.tsx  SystemErrorBoundary.tsx  logger.ts  main.tsx
src/auth/: AuthProvider.tsx  UserDetailsPanel.tsx
src/components/: BookAppointment.tsx  DoctorDetails.tsx  DoctorSearch.tsx  Router.tsx  ScreenshotComponent.tsx  ThemeInitializer.tsx
src/hooks/: use-auth.ts
src/lib/: design-tokens.ts  theme-config.ts  themes.ts
src/lib/sdk/: sdk.gen.ts  types.gen.ts
src/lib/themes/: index.ts
